# rms-ephemeris-tools

./: .coderabbit.yaml  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Ephemeris_FORTRAN_vs_Python_Gap_Analysis.md  README.md  pyproject.toml  view.ps
.cursor/rules/: bug_report.mdc  git_workflow.mdc  python_best_practices.mdc
.cursor/skills/critique-test-suite/: SKILL.md
.cursor/skills/run-all-checks/: SKILL.md
.github/workflows/: publish_to_pypi.yml  run-tests.yml
docs/: conf.py  index.rst  module.rst
docs/api/: cli.rst  core.rst  index.rst  planets.rst  rendering.rst  root.rst  spice.rst
docs/dev_guide/: architecture.rst  cgi_parameter_reference.rst  comparison_workflows.rst  fortran_comparison.rst  fortran_compatibility.rst  index.rst  modules.rst  porting.rst  server_comparison.rst
docs/user_guide/: cli.rst  examples.rst  index.rst  install.rst  quickstart.rst  reference.rst
fortran/Julian/: make_julian.sh
fortran/MyWWW/: make_www.sh
fortran/Tools/: tracker3_xxx.f  viewer3_jup.f  viewer3_mar.f  viewer3_nep.f  viewer3_plu.f  viewer3_sat.f  viewer3_ura.f
fortran/Tools/rspk/: rspk_loadfiles.f  rspk_loadsc.f  rspk_orbitopen.f  rspk_trackmoonc.f  rspk_trackmoons.f
scripts/: README_param_sweep.md  generate_random_cgi_queries.py  generate_random_query_urls.py  run-all-checks.sh  run-fortran-comparison-test-files.sh  run-random-fortran-comparisons.sh  test_ephemeris_param_sweep.sh  test_tracker_param_sweep.sh  test_viewer_param_sweep.sh
src/ephemeris_tools/: __init__.py  angle_utils.py  config.py  constants.py  ephemeris.py  input_params.py  install_web_tools.py  params.py  params_env.py  record.py  stars.py  time_utils.py  tracker.py  viewer.py  viewer_helpers.py
src/ephemeris_tools/cli/: __init__.py  cgi.py  main.py
src/ephemeris_tools/planets/: __init__.py  base.py  jupiter.py  mars.py  neptune.py  pluto.py  saturn.py  uranus.py
src/ephemeris_tools/rendering/: __init__.py  draw_tracker.py  draw_view.py  draw_view_finish.py  draw_view_helpers.py  draw_view_impl.py  escher.py  euclid.py  geometry3d.py  matplotlib_tracker.py  matplotlib_view.py  planet_grid.py  postscript.py
src/ephemeris_tools/spice/: __init__.py  bodmat.py  common.py  geometry.py  load.py  observer.py  orbits.py  rings.py  shifts.py
stubs/cspyce/: __init__.pyi
stubs/julian/: __init__.pyi
test_files/: viewer-test-urls.txt
tests/: conftest.py  test_cli_ephemeris.py  test_cli_tracker.py  test_cli_viewer.py  test_compare_fortran.py  test_compare_query_string.py  test_draw_tracker.py  test_draw_view.py  test_ephemeris.py  test_fortran_python_differences.py  test_fov_units.py  test_generate_random_cgi_queries.py  test_generate_random_query_urls.py  test_observer_state.py  test_params_dataclasses.py  test_parse_center.py  test_parse_fov.py  test_parse_moons.py  test_parse_observer.py  test_parse_rings.py  test_regression_README.md  test_spice_load_files.py  test_spice_load_spacecraft.py  test_time_utils.py  test_tracker_backend.py  test_tracker_cgi.py  test_viewer_backend.py  test_viewer_cgi.py
tests/compare_fortran/: README.md  __init__.py  __main__.py  diff_utils.py  runner.py  spec.py
tests/compare_servers/: README.md  __init__.py  __main__.py  compare_servers.py
web/cgi-bin/tools/: ephem3_xxx.sh  newcgi.pm  parse_cgi.sh  tracker3_xxx.sh  viewer3_xxx.pl  viewer3_xxx.sh
web/old/tools/: EPHEM3_FORM.shtml  FOOTER.shtml  MOON_SELECTION.shtml  VIEWER3_FORM_JUP.shtml  VIEWER3_FORM_MAR.shtml  VIEWER3_FORM_PLU.shtml  VIEWER3_FORM_URA.shtml  ephem3_jup.shtml  ephem3_jupc_help.shtml  ephem3_jupj.shtml  ephem3_plu.shtml  ephem3_plu_help.shtml  ephem3_plunh_help.shtml  ephem3_sat.shtml  ephem3_satc.shtml  ephem3_ura.shtml  ephem3_ura_help.shtml  starlist_mar.txt  starlist_ura.txt  tracker3_jup_help.shtml  tracker3_jupec.shtml  tracker3_jupj.shtml  tracker3_jupj_help.shtml  tracker3_jupjc.shtml  tracker3_mar.shtml  tracker3_plu.shtml  tracker3_sat.shtml  tracker3_sat_help.shtml  tracker3_satc.shtml  tracker3_ura_help.shtml  viewer3_jup_help.shtml  viewer3_jupc_help.shtml  viewer3_jupec_help.shtml  viewer3_jupjc_help.shtml  viewer3_jupnh_help.shtml  viewer3_nep_help.shtml  viewer3_plu.shtml  viewer3_sat_help.shtml  (+2 more)
web/tools/: EPHEM3_FORM.shtml  EPHEM3_HELP.shtml  EPHEMERIS_INFO.shtml  OBSERVATORIES.html  STYLES.html  TRACKER3_FORM.shtml  TRACKER3_HELP.shtml  VIEWER3_FORM_JUP.shtml  VIEWER3_FORM_MAR.shtml  VIEWER3_FORM_NEP.shtml  VIEWER3_FORM_PLU.shtml  VIEWER3_FORM_SAT.shtml  VIEWER3_FORM_URA.shtml  VIEWER3_HELP.shtml  VIEWPOINT.shtml  __init__.py  ephem3_jup_help.shtml  ephem3_jupc.shtml  ephem3_jupec.shtml  ephem3_jupec_help.shtml  ephem3_jupj_help.shtml  ephem3_jupjc.shtml  ephem3_jupjc_help.shtml  ephem3_jupnh.shtml  ephem3_jupnh_help.shtml  ephem3_mar.shtml  ephem3_mar_help.shtml  ephem3_nep.shtml  ephem3_nep_help.shtml  ephem3_plunh.shtml  ephem3_sat_help.shtml  ephem3_satc_help.shtml  starlist_jup.txt  starlist_nep.txt  starlist_plu.txt  starlist_sat.txt  test.html  time_formats.shtml  tracker3_jup.shtml  tracker3_jupc.shtml  (+29 more)
(+28 files in other folders)
