[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-ephemeris-tools"
version = "0.1.0"
description = "Ephemeris generator, moon tracker, and planet viewer tools (Python port of FORTRAN tools)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "PDS Ring-Moon Systems Node, SETI Institute" }
]
keywords = ["ephemeris", "SPICE", "planetary", "astronomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "cspyce>=2.3.0",
    "numpy>=2.0",
    "rms-julian>=2.0",
]

[project.optional-dependencies]
render = ["matplotlib>=3.8"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
ephemeris-tools = "ephemeris_tools.cli.main:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/ephemeris_tools"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "A", "N", "PT", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
